dependencies: install esp-dsp via the component manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,11 +65,13 @@ elseif(${IDF_TARGET} STREQUAL "esp32s3")
     add_prebuilt_library(esp_audio_front_end "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32s3/libesp_audio_front_end.a" PRIV_REQUIRES ${componect_name})
     add_prebuilt_library(hufzip "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32s3/libhufzip.a" PRIV_REQUIRES ${componect_name})
 
+    idf_component_get_property(esp_dsp_lib espressif__esp-dsp COMPONENT_LIB)
+
     target_link_libraries(${COMPONENT_TARGET} "-Wl,--start-group"
         hufzip
         dl_lib
         c_speech_features
-    esp-dsp
+        $<TARGET_FILE:${esp_dsp_lib}>
         esp_audio_front_end
         esp_audio_processor
         multinet
