--- a/idf_component.yml
+++ b/idf_component.yml
@@ -3,6 +3,7 @@ description: esp_sr provides basic algorithms for Speech Recognition application
 url: https://github.com/espressif/esp-sr
 dependencies:
   idf: ">=4.4"
+  espressif/esp-dsp: "^1.2.1"
 files:
   exclude:
     - ".github"
