test: Add more tts test cases

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,19 @@
-idf_component_register(SRC_DIRS "."
+set(srcs
+    test_chinese_tts.c
+)
+
+if(IDF_TARGET STREQUAL "esp32")
+    list(APPEND srcs test_wakenet.c
+                    test_afe.c 
+                    test_multinet.c)
+
+elseif(IDF_TARGET STREQUAL "esp32")
+    list(APPEND srcs test_wakenet.c
+                    test_afe.c 
+                    test_multinet.c)
+
+endif()
+
+idf_component_register(SRCS ${srcs}
                         INCLUDE_DIRS "."
                         REQUIRES cmock esp-sr)
