--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ _build/*
 # Downloaded font files
 docs/_static/DejaVuSans.ttf
 docs/_static/NotoSansSC-Regular.otf
+
+# ci
+test_apps/dependencies.lock
+test_apps/managed_components
+test_apps/*/build_*
+pytest_log
