--- a/test_apps/esp-sr/main/CMakeLists.txt
+++ b/test_apps/esp-sr/main/CMakeLists.txt
@@ -12,5 +12,5 @@ idf_component_register(SRCS ${srcs}
                     REQUIRES unity esp-sr
                     WHOLE_ARCHIVE)
 
-
+target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
 endif()
