--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,4 +1,4 @@
-version: "1.3.4"
+version: "1.4.0"
 description: esp_sr provides basic algorithms for Speech Recognition applications
 url: https://github.com/espressif/esp-sr
 dependencies:
@@ -7,7 +7,8 @@ dependencies:
 files:
   exclude:
     - ".github"
-    - "docs"
+    - "docs/**/*"
+    - "test_apps/**/*"
 targets:
   - esp32
   - esp32s2
