ci: Do not build docs when files in docs do not be modified

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,13 +78,14 @@ before_script:
 .rules:build_docs:docs:
   rules:
     - <<: *if-protected
-    - <<: *if-label-build
+      changes: *patterns-build_docs
     - <<: *if-dev-push
       changes: *patterns-build_docs
 
 .rules:deploy:docs_preview:
   rules:
     - <<: *if-label-build
+      changes: *patterns-build_docs
     - <<: *if-dev-push
       changes: *patterns-build_docs
 
