ci: Add esp32 build

--- a/test_apps/.build-rules.yml
+++ b/test_apps/.build-rules.yml
@@ -1,6 +1,6 @@
 test_apps/esp-sr:
   enable:
-    - if: IDF_TARGET in ["esp32s3"]
+    - if: IDF_TARGET in ["esp32s3", "esp32"]
       temporary: false
 
 test_apps/esp-tts:
