feat: support esp32p4 for esp-tts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,8 @@ elseif(${IDF_TARGET} STREQUAL "esp32p4")
         esp_audio_processor
         multinet
         flite_g2p
+        esp_tts_chinese
+        voice_set_xiaole
         wakenet
         "-Wl,--end-group")
 
