--- a/test_apps/.build-rules.yml
+++ b/test_apps/.build-rules.yml
@@ -1,9 +1,9 @@
 test_apps/esp-sr:
   enable:
-    - if: IDF_TARGET in ["esp32s3", "esp32"]
+    - if: IDF_TARGET in ["esp32s3", "esp32", "esp32p4"]
       temporary: false
 
 test_apps/esp-tts:
   enable:
-    - if: IDF_TARGET in ["esp32s3", "esp32"]
+    - if: IDF_TARGET in ["esp32s3", "esp32", "esp32p4"]
       temporary: false
